<resources>
    <string name="app_name">Running Events</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="date">Date</string>
    <string name="nearby">Near By</string>
    <string name="web_client_id">507603437890-7prjce0l4mruhaqhs612s05ssne5iuno.apps.googleusercontent.com</string>
    <string name="continue_without_registration">Continue without registration</string>
    <string name="race_name">Race Name</string>
    <string name="city">City</string>
    <string name="time">Time</string>
    <string name="website">Website</string>
    <string name="categories">Categories</string>
    <string name="description">Description</string>
    <string name="races_sort_preference_key">races_sort_key</string>
    <string name="radius_preference_key">radius_key</string>
    <string name="races_sort_option_date_key">races_sort_date_key</string>
    <string name="races_sort_option_nearby_key">races_sort_nearby_key</string>
    <string name="filter_distance_option_all_key">filter_distance_all_key</string>
    <string name="filter_distance_option_5km_key">filter_distance_5km_key</string>
    <string name="filter_distance_option_10km_key">filter_distance_10km_key</string>
    <string name="filter_distance_option_half_key">filter_distance_half_key</string>
    <string name="filter_distance_option_marathon_key">filter_distance_marathon_key</string>
    <string name="sort">Sort</string>
    <string name="radius_km">Radius [km]</string>
    <string name="all">All</string>
    <string name="five_km">5km</string>
    <string name="ten_km">10km</string>
    <string name="half_marathon">Half-Marathon</string>
    <string name="marathon">Marathon</string>
    <string name="filter_races">Filter Races</string>
    <string name="login_preference_key">login</string>
    <string name="logout_preference_key">logout</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="open_website">Open Website</string>
    <string name="about">About</string>
    <string name="you_are_not_logged_in">You are not logged in</string>
    <string name="saving_race_please_wait">Saving Race Please Wait...</string>
    <string name="country">Country</string>
    <string name="add_new_race">Add new race</string>
    <string name="distance">Distance</string>
    <string name="fee">Fee</string>
    <string name="currency">Currency</string>
    <string name="start_time">Start Time</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="free">Free</string>
    <string name="delete_race">Delete race</string>
    <string name="you_want_to_delete_race">Are you sure you want to delete this race?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="cant_load_image">Can\'t load image.</string>
    <string name="select_image">Select image</string>
    <string name="race_saved_successfully">Race Saved Successfully</string>
</resources>