<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorAccent"
        android:paddingStart="6dp"
        android:paddingEnd="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/add_new_race"
        app:titleTextColor="?android:colorBackground" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <RelativeLayout
                android:id="@+id/imageHolder"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/image_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageSelect"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:transitionName="img" />

                <ImageView
                    android:id="@+id/cameraIcon"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_camera"
                    app:tint="?android:colorForeground" />

                <TextView
                    android:id="@+id/imageError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="50dp"
                    android:textColor="@color/design_default_color_error"
                    tools:text="ERROR" />
            </RelativeLayout>

            <TextView
                android:id="@+id/raceNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/race_name"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageHolder" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/raceNameInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/raceNameLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/raceNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/countryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/country"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/raceNameInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/countryInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countryLabel">

                <AutoCompleteTextView
                    android:id="@+id/countryInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Select country"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/cityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/city"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countryInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cityInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cityLabel">

                <AutoCompleteTextView
                    android:id="@+id/cityInputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="Select country first"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textSize="16sp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/timeLabel"
                app:layout_constraintTop_toBottomOf="@id/cityInputLayout" />

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/time"
                android:textSize="16sp"
                app:layout_constraintHorizontal_weight="1.5"
                app:layout_constraintLeft_toRightOf="@+id/dateLabel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cityInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:clickable="true"
                app:hintEnabled="false"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/timeInputLayout"
                app:layout_constraintTop_toBottomOf="@id/dateLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timeInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:clickable="true"
                app:hintEnabled="false"
                app:layout_constraintHorizontal_weight="1.5"
                app:layout_constraintLeft_toRightOf="@+id/dateInputLayout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/descriptionLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/websiteLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/website"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/websiteInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:helperText="Optional"
                app:hintEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/websiteLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/websiteEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/categoriesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/categories"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/websiteInputLayout" />

            <LinearLayout
                android:id="@+id/containerCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categoriesLabel"></LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newCategoryButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="30dp"
                android:text="Add Category"
                android:textAllCaps="false"
                app:icon="@drawable/ic_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/containerCategories" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/savingProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_transparent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.80">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/savingProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />

                <TextView
                    android:id="@+id/savingResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/saving_race_please_wait"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
